--- a/assets/css/dialog.css
+++ b/assets/css/dialog.css
@@ -135,6 +135,7 @@
  **/
  
 .add-to-playlist-dialog .select-playlist {
+	padding-top: 15px;
 	margin: 0 -2%;
 }
  
